[project]
name = "comfyui-sd3-nodes"
description = "Nodes that support Stable Diffusion 3 Medium better."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/liusida/ComfyUI-SD3-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SD3-nodes"
Icon = ""
